Feat: Ajout de la config Terraform

--- a/.gitignore
+++ b/.gitignore
@@ -1,66 +1,5 @@
-# --- Terraform ---
-# Dossiers de cache des providers/modules
-**/.terraform/*
-
-# Fichiers d'état (contiennent des données sensibles)
-**/*.tfstate
-**/*.tfstate.*
-**/*.tfstate.backup
-
-# Fichiers de crash
-**/crash.log
-**/crash.*.log
-
-# Fichiers de variables (peuvent contenir des secrets)
-**/*.tfvars
-**/*.tfvars.json
-
-# Fichiers override
-**/override.tf
-**/override.tf.json
-**/*_override.tf
-**/*_override.tf.json
-
-# Plan files
-**/*.tfplan
-
-# Config CLI Terraform
-**/.terraformrc
-**/terraform.rc
-
-# .terraform.lock.hcl doit être commité
-!**/.terraform.lock.hcl
-
-# --- Ansible ---
-# Retry files
-**/*.retry
-
-# --- SSH Keys ---
-# Ne jamais commiter les clés privées
-**/*.pem
-**/*.key
-**/id_rsa
-**/id_rsa.pub
-
-# --- OS ---
-# macOS
-.DS_Store
-
-# Windows
-Thumbs.db
-desktop.ini
-
-# Linux
-*~
-
-# --- IDE ---
-# VSCode
-.vscode/
-
-# JetBrains
-.idea/
-*.iml
-
-# --- Autres ---
-# Logs généraux
-*.log
+# Terraform
+.terraform/
+*.tfstate
+*.tfstate.*
+*.tfstate.backup
