feat: Amélioraation variables Ansible

--- a/ansible/site.yml
+++ b/ansible/site.yml
@@ -1,4 +1,9 @@
 ---
+- name: Collecter les facts de tous les serveurs
+  hosts: all
+  gather_facts: yes
+  tasks: []
+
 - name: Configuration des serveurs Web
   hosts: web
   become: yes
