--- a/ansible/hosts.ini
+++ b/ansible/hosts.ini
@@ -6,4 +6,5 @@
 
 [all:vars]
 ansible_python_interpreter=/usr/bin/python3
+ansible_ssh_private_key_file=~/.ssh/id_ed25519
 ansible_ssh_common_args='-o StrictHostKeyChecking=no'
