--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
-inventory = hosts.ini
+inventory = inventory.yml
 host_key_checking = False
 retry_files_enabled = False
 gathering = smart
