--- a/ansible/roles/web/tasks/main.yml
+++ b/ansible/roles/web/tasks/main.yml
@@ -27,3 +27,54 @@
     port: 80
     timeout: 10
   tags: nginx
+
+- name: Installer OpenSSL pour les certificats
+  apt:
+    name: openssl
+    state: present
+  when: https_enabled | default(false)
+  tags: https
+
+- name: Créer le répertoire pour les certificats SSL
+  file:
+    path: /etc/nginx/ssl
+    state: directory
+    owner: root
+    group: root
+    mode: '0755'
+  when: https_enabled | default(false)
+  tags: https
+
+- name: Générer un certificat SSL auto-signé
+  command: >
+    openssl req -x509 -nodes -days 365 -newkey rsa:2048
+    -keyout /etc/nginx/ssl/nginx-selfsigned.key
+    -out /etc/nginx/ssl/nginx-selfsigned.crt
+    -subj "/C=FR/ST=France/L=Paris/O=Infrastructure/OU=IT/CN={{ nginx_server_name | default('localhost') }}"
+  args:
+    creates: /etc/nginx/ssl/nginx-selfsigned.crt
+  when: https_enabled | default(false)
+  notify: Recharger Nginx
+  tags: https
+
+- name: Configurer Nginx avec HTTPS
+  template:
+    src: nginx-https.conf.j2
+    dest: /etc/nginx/sites-available/default
+    owner: root
+    group: root
+    mode: '0644'
+  when: https_enabled | default(false)
+  notify: Recharger Nginx
+  tags: https
+
+- name: Configurer Nginx sans HTTPS (staging)
+  template:
+    src: nginx-http.conf.j2
+    dest: /etc/nginx/sites-available/default
+    owner: root
+    group: root
+    mode: '0644'
+  when: not (https_enabled | default(false))
+  notify: Recharger Nginx
+  tags: nginx
