--- a/ansible/site.yml
+++ b/ansible/site.yml
@@ -1,19 +1,19 @@
 ---
 - name: Collecter les facts de tous les serveurs
   hosts: all
-  gather_facts: yes
+  gather_facts: true
   tasks: []
 
 - name: Configuration des serveurs Web
   hosts: web
-  become: yes
+  become: true
   roles:
     - common
     - web
 
 - name: Configuration des serveurs DB
   hosts: db
-  become: yes
+  become: true
   roles:
     - common
     - db
